GC list of correction in email to chris 28-2-22

--- a/document/source/assertion.bib
+++ b/document/source/assertion.bib
@@ -508,3 +508,24 @@ year={1968}
    month={Sep},
    pages={3–18}
 }
+
+
+@misc{law_commission_UK,
+  author = {{\relax The Law Commission}},
+  title = {Automated Vehicles: joint report},
+  year={2022},
+  month={Jan},  
+  note = {LC 204, Accessed: 2022-02-16},
+  available = {\url{lawcom.gov.uk/project/automated-vehicles/}}
+}
+
+@article{rosenfeld2019explainability,
+  title={Explainability in human--agent systems},
+  author={Rosenfeld, Avi and Richardson, Ariella},
+  journal={Autonomous Agents and Multi-Agent Systems},
+  volume={33},
+  number={6},
+  pages={673--705},
+  year={2019},
+  publisher={Springer}
+}
