--- a/document/ieee_trans/asr_ieeetrans.tex
+++ b/document/ieee_trans/asr_ieeetrans.tex
@@ -16,12 +16,12 @@
 \usepackage{dblfloatfix}
 \usepackage{booktabs}
 \usepackage{authblk}
-\newcommand{\TODO}[1]{{\color{red}\textbf{TODO: #1}}}
-\usepackage[disable]{todonotes}
+% \newcommand{\TODO}[1]{{\color{red}\textbf{TODO: #1}}}
 % \pagenumbering{gobble} %suppresses page numbers
 \usepackage{balance} %balance columns
-\usepackage{todonotes} 
-% \usepackage[disable]{todonotes}
+% \usepackage{todonotes} 
+\usepackage[disable]{todonotes}
+
 \usepackage{siunitx}
 % \usepackage{draftwatermark}
 \usepackage{flushend}
